# chronicle

./: .gitignore  LICENSE  README.md
chronicle-daemon/: Cargo.toml
chronicle-daemon/.cargo/: config.toml
chronicle-daemon/crates/audio/: Cargo.toml
chronicle-daemon/crates/audio/src/: accumulator.rs  encoder.rs  engine.rs  handler.rs  lib.rs
chronicle-daemon/crates/audio/tests/: integration.rs
chronicle-daemon/crates/capture/: Cargo.toml
chronicle-daemon/crates/capture/src/: encoder.rs  engine.rs  error.rs  handler.rs  lib.rs  metadata.rs  pixel_buffer.rs
chronicle-daemon/crates/capture/tests/: integration.rs
chronicle-daemon/crates/ipc/: Cargo.toml
chronicle-daemon/crates/ipc/src/: lib.rs  server.rs
chronicle-daemon/crates/ocr/: Cargo.toml
chronicle-daemon/crates/ocr/src/: lib.rs
chronicle-daemon/crates/storage/: Cargo.toml
chronicle-daemon/crates/storage/src/: audio.rs  error.rs  files.rs  lib.rs  media.rs  models.rs  retention.rs  schema.rs  screenshots.rs  search.rs
chronicle-daemon/crates/storage/src/migrations/: 001_initial_schema.sql
chronicle-daemon/crates/storage/tests/: integration.rs
chronicle-daemon/crates/transcription/: Cargo.toml
chronicle-daemon/crates/transcription/src/: lib.rs
chronicle-daemon/src/: ipc_handler.rs  main.rs  permissions.rs  pipeline.rs
chronicle-ui/: Package.resolved  Package.swift
chronicle-ui/Sources/ChronicleUI/: ChronicleApp.swift  DaemonConnection.swift
chronicle-ui/Tests/ChronicleUITests/: CodableTests.swift
docs/: project-description.md  scratchpad.md
docs/decisions/: 001-two-process-architecture.md  002-capture-all-displays.md  003-adaptive-capture-rate.md  004-json-unix-socket-ipc.md  005-async-transcription.md  006-external-content-fts5.md  007-wal-mode-sqlite.md  INDEX.md
docs/development/: INDEX.md  building.md  testing.md
docs/guides/: chronicle-daemon.md  index.md  screen-capture.md  storage-engine.md
docs/plans/: 2026-03-21-storage-engine-design.md  2026-03-21-storage-engine-implementation.md  2026-03-22-screen-capture-core-design.md  2026-03-22-screen-capture-core-implementation.md  2026-03-25-ocr-pipeline-design.md  2026-03-25-ocr-pipeline-implementation.md  handoff-2026-03-22.md
docs/qa/: 2026-03-29-audio-storage-integration.md
docs/standards/: INDEX.md  accessibility.md  security.md
docs/use-cases/: FORMAT.md  INDEX.md
