[workspace]
members = [
    ".",
    "crates/capture",
    "crates/ocr",
    "crates/audio",
    "crates/transcription",
    "crates/storage",
    "crates/ipc",
]
resolver = "2"

[package]
name = "chronicle-daemon"
version = "0.1.0"
edition = "2024"
description = "Background daemon for Chronicle — continuous screen and audio capture with full-text search"
license = "MIT"

[dependencies]
chronicle-capture = { path = "crates/capture" }
chronicle-ocr = { path = "crates/ocr" }
chronicle-audio = { path = "crates/audio" }
chronicle-transcription = { path = "crates/transcription" }
chronicle-storage = { path = "crates/storage" }
chronicle-ipc = { path = "crates/ipc" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
