[workspace]
members = [
    ".",
    "crates/capture",
    "crates/ocr",
    "crates/audio",
    "crates/transcription",
    "crates/storage",
    "crates/ipc",
]
resolver = "2"

[package]
name = "chronicle-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Background daemon for Chronicle — continuous screen and audio capture with full-text search"
license = "MIT"

[dependencies]
chronicle-capture = { path = "crates/capture" }
chronicle-ocr = { path = "crates/ocr" }
chronicle-audio = { path = "crates/audio" }
chronicle-transcription = { path = "crates/transcription" }
chronicle-storage = { path = "crates/storage" }
chronicle-ipc = { path = "crates/ipc" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
