[package]
name = "chronicle-audio"
version = "0.1.0"
edition = "2024"
description = "Audio capture — microphone and system audio via ScreenCaptureKit"
license = "MIT"

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCStream",
    "SCShareableContent",
    "objc2-core-media",
    "dispatch2",
    "block2",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSError",
] }
objc2-core-media = { version = "0.3", features = [
    "CMSampleBuffer",
    "CMBlockBuffer",
    "CMBase",
] }
objc2-core-foundation = "0.3"
log = "0.4"
dispatch2 = "0.3"
opus = "0.3"
ogg = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
