[package]
name = "chronicle-capture"
version = "0.1.0"
edition = "2024"
description = "Screen capture engine — multi-display adaptive capture via ScreenCaptureKit"
license = "MIT"

[dependencies]
screencapturekit = { version = "1.5", features = ["macos_14_0"] }
tokio = { version = "1", features = ["sync", "rt"] }
thiserror = "2"
log = "0.4"
core-foundation = "0.10"
core-graphics = "0.24"
foreign-types = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tempfile = "3"
