[package]
name = "chronicle-ipc"
version = "0.1.0"
edition = "2024"
description = "IPC server — JSON-over-Unix-domain-socket protocol for UI communication"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt"] }
tokio-util = "0.7"
log = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "rt-multi-thread"] }
