[package]
name = "chronicle-ocr"
version = "0.1.0"
edition = "2024"
description = "OCR pipeline — text extraction from screenshots via Apple Vision framework"
license = "MIT"

[dependencies]
objc2 = "0.6"
objc2-vision = { version = "0.3", features = [
    "VNRecognizeTextRequest",
    "VNRequest",
    "VNRequestHandler",
    "VNObservation",
] }
objc2-foundation = { version = "0.3", features = [
    "NSURL",
    "NSArray",
    "NSString",
    "NSDictionary",
    "NSError",
] }
thiserror = "2"
