[package]
name = "chronicle-storage"
version = "0.1.0"
edition = "2024"
description = "Storage engine — SQLite schema, FTS5 indexes, and file management"
license = "MIT"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled-full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
tokio = { version = "1", features = ["rt"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
